--- a/package.json
+++ b/package.json
@@ -11,17 +11,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
+    "@angular/animations": "^7.2.13",
+    "@angular/cdk": "^7.3.7",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
+    "@angular/material": "^7.3.7",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@datorama/akita": "^3.5.6",
+    "apollo-angular": "^1.5.0",
+    "apollo-angular-link-http": "^1.3.1",
+    "apollo-cache-inmemory": "^1.3.2",
+    "apollo-client": "^2.4.0",
+    "apollo-link": "^1.2.0",
+    "apollo-link-context": "^1.0.17",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.10.0",
+    "hammerjs": "^2.0.8",
+    "ngx-take-until-destroy": "^5.4.0",
     "rxjs": "~6.3.3",
+    "ts-optchain": "^0.1.5",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
@@ -30,7 +44,9 @@
     "@angular/cli": "~7.3.4",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
+    "@datorama/akita-ngdevtools": "^1.0.4",
     "@types/node": "~8.9.4",
+    "node-fetch": "^2.3.0",
     "prettier": "^1.17.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
