added pwa support

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,7 @@
 {
+  "angularCompilerOptions": {
+    "entryModule": "./app/app.module#AppModule"
+  },
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
