--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/material": "^7.3.7",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
+    "@angular/pwa": "^0.12.4",
     "@angular/router": "~7.2.0",
+    "@angular/service-worker": "~7.2.0",
     "@datorama/akita": "^3.5.6",
     "apollo-angular": "^1.5.0",
     "apollo-angular-link-http": "^1.3.1",
