--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "compile:server": "webpack --config webpack.server.config.js --progress --colors",
+    "serve:ssr": "node dist/server",
+    "build:ssr": "npm run build:client-and-server-bundles && npm run compile:server",
+    "build:client-and-server-bundles": "ng build --prod && node compress.js && ng run this-dot-exercise:server:production"
   },
   "private": true,
   "dependencies": {
@@ -17,13 +21,17 @@
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
+    "@angular/http": "~7.2.0",
     "@angular/material": "^7.3.7",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
+    "@angular/platform-server": "~7.2.0",
     "@angular/pwa": "^0.12.4",
     "@angular/router": "~7.2.0",
     "@angular/service-worker": "~7.2.0",
     "@datorama/akita": "^3.5.6",
+    "@nguniversal/express-engine": "^7.1.1",
+    "@nguniversal/module-map-ngfactory-loader": "0.0.0",
     "apollo-angular": "^1.5.0",
     "apollo-angular-link-http": "^1.3.1",
     "apollo-cache-inmemory": "^1.3.2",
@@ -31,7 +39,9 @@
     "apollo-link": "^1.2.0",
     "apollo-link-context": "^1.0.17",
     "bootstrap": "^4.3.1",
+    "compression": "^1.7.4",
     "core-js": "^2.5.4",
+    "express": "^4.15.2",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.10.0",
     "hammerjs": "^2.0.8",
@@ -39,19 +49,29 @@
     "rxjs": "~6.3.3",
     "ts-optchain": "^0.1.5",
     "tslib": "^1.9.0",
+    "zlib": "^1.0.5",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
+    "@angular-builders/jest": "^7.4.2",
     "@angular-devkit/build-angular": "~0.13.8",
     "@angular/cli": "~7.3.4",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
     "@datorama/akita-ngdevtools": "^1.0.4",
+    "@netbasal/spectator": "^3.6.1",
+    "@types/jest": "^24.0.11",
     "@types/node": "~8.9.4",
+    "jest": "^24.7.1",
+    "jest-preset-angular": "^7.1.0",
+    "ng-mocks": "^7.7.0",
+    "ngx-wallaby-jest": "0.0.2",
     "node-fetch": "^2.3.0",
     "prettier": "^1.17.0",
+    "ts-loader": "^5.2.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+    "typescript": "~3.2.2",
+    "webpack-cli": "^3.1.0"
   }
 }
