--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "importHelpers": true,
     "target": "es5",
     "typeRoots": ["node_modules/@types"],
+    "types": ["jest", "node"],
     "lib": ["es2018", "dom", "esnext.asynciterable"]
   }
 }
