support for coveralls

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "test:ci": "ng test --ci --run-in-band --coverage",
+    "test:ci": "ng test --ci --run-in-band",
+    "test:coverage": "ng test --coverage && cat ./coverage/lcov.info | coveralls",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "compile:server": "webpack --config webpack.server.config.js --progress --colors",
@@ -63,6 +64,7 @@
     "@netbasal/spectator": "^3.6.1",
     "@types/jest": "^24.0.11",
     "@types/node": "~8.9.4",
+    "coveralls": "^3.0.3",
     "jest": "^24.7.1",
     "jest-preset-angular": "^7.1.0",
     "ng-mocks": "^7.7.0",
