--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "apollo-link": "^1.2.0",
     "apollo-link-context": "^1.0.17",
     "bootstrap": "^4.3.1",
+    "codelyzer": "^5.0.0",
     "compression": "^1.7.4",
     "core-js": "^2.5.4",
     "express": "^4.15.2",
@@ -74,6 +75,7 @@
     "ts-loader": "^5.2.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
+    "tslint-angular": "^1.1.2",
     "typescript": "~3.2.2",
     "webpack-cli": "^3.1.0"
   }
