--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "npm run serve:ssr",
+    "environment": "ts-node ./set-env.ts",
     "build": "ng build",
     "test": "ng test",
     "test:ci": "ng test --ci --run-in-band",
@@ -13,8 +14,8 @@
     "compile:server": "webpack --config webpack.server.config.js --progress --colors",
     "serve:ssr": "node dist/server",
     "build:ssr": "npm run build:client-and-server-bundles && npm run compile:server",
-    "build:client-and-server-bundles": "ng build --prod && ng run this-dot-exercise:server:production",
-    "heroku-postbuild": "npm run build:ssr"
+    "build:client-and-server-bundles": "ng build --prod --environment=prod && ng run this-dot-exercise:server:production",
+    "heroku-postbuild": "npm run environment.config -- --environment=prod && npm run build:ssr"
   },
   "engines": {
     "node": "11.10.1",
@@ -71,6 +72,7 @@
     "@types/jest": "^24.0.11",
     "@types/node": "^8.9.5",
     "coveralls": "^3.0.3",
+    "dotenv": "^7.0.0",
     "jest": "^24.7.1",
     "jest-preset-angular": "^7.1.0",
     "ng-mocks": "^7.7.0",
