heroku environment config fix

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "serve:ssr": "node dist/server",
     "build:ssr": "npm run build:client-and-server-bundles && npm run compile:server",
     "build:client-and-server-bundles": "ng build --prod --environment=prod && ng run this-dot-exercise:server:production",
-    "heroku-postbuild": "npm run environment.config -- --environment=prod && npm run build:ssr"
+    "heroku-postbuild": "npm run environment -- --environment=prod && npm run build:ssr"
   },
   "engines": {
     "node": "11.10.1",
