dont need to specify prod env on a prod build

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "compile:server": "webpack --config webpack.server.config.js --progress --colors",
     "serve:ssr": "node dist/server",
     "build:ssr": "npm run build:client-and-server-bundles && npm run compile:server",
-    "build:client-and-server-bundles": "ng build --prod --environment=prod && ng run this-dot-exercise:server:production",
+    "build:client-and-server-bundles": "ng build --prod && ng run this-dot-exercise:server:production",
     "heroku-postbuild": "npm run environment -- --environment=prod && npm run build:ssr"
   },
   "engines": {
