--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@datorama/akita": "^3.5.6",
     "@nguniversal/express-engine": "^7.1.1",
     "@nguniversal/module-map-ngfactory-loader": "0.0.0",
+    "@ngx-pwa/offline": "^6.1.0",
     "apollo-angular": "^1.5.0",
     "apollo-angular-link-http": "^1.3.1",
     "apollo-cache-inmemory": "^1.3.2",
